2003-05-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.c (eval_installed_file): HIG fixup as per bug #112244.

2003-04-30  Abel Cheung  <maddog@linux.org.hk>

	* ChangeLog: Convert to UTF-8.

2003-04-06  Ross Burton  <ross@burtonini.com>

	* agnes.scm: Fix hints, thanks to
	kyamada@psg.cs.titech.ac.jp. Closing #90103.

2003-01-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* freecell.scm: Updated undo/redo to new scheme. This may fix bug
	#83517 (it certainly fixes a bug and the symptoms in #83517 fit
	the profile).

	* plait.scm:  Updated undo/redo to new scheme.

	* labyrinth.scm: Updated undo/redo to new scheme.

	* glenwood.scm: Updated undo/redo to new scheme. Fixes a
	previously undiscovered bug.

	* eight_off.scm: Updated undo/redo to new scheme. This fixes a
	previously undetected bug.

	* chessboard.scm: Updated undo/redo to new scheme.

	* camelot.scm: Updated undo/redo to new scheme.

	* bakers_game.scm: Updated undo/redo to new scheme. Refixes
	#91101/#90905.

	* seahaven.scm: Removed the old undo/redo code in favour of the
	new transparent scheme. Should be a better fix for the
	bugs #65242/#89540 (already closed).

	* sol.scm: Added transparent support for undo/redo of variables in
	individual games. The variables that were already being saved have
	not been altered to use this method.

2003-03-07  Ross Burton  <ross@burtonini.com>

	* sol.c: Fix up compile warnings.

2003-03-03  Ross Burton  <ross@burtonini.com>

	* dialog.c: Remove the headers from the New Game dialog, and inset
	the table.

	* menu.c (help_about_callback): Set the About dialog as transient
	for the main window.

	* menu.c:(help_about_callback): Remove the evil "New game of..."
	sub-menu, and use the "Select" dialog which nobody knew existed.

2002-12-11  Ross Burton  <ross@burtonini.com>

	* dialog.c: Allow the user to have a choice in the Game Won
	dialog. Slightly edited patch from pborelli@katamail.com, closing
	#100120.
