@@ -1,5 +1,8 @@
 2003-05-09  Callum McKenzie  <callum@physics.otago.ac.nz>
 
+	* yukon.scm (check-a-tableau): Finally applying my fix to bug
+	#64236.
+
 	* sol.c (eval_installed_file): HIG fixup as per bug #112244.
 
 2003-04-30  Abel Cheung  <maddog@linux.org.hk>
